# DomainCatch

./: config.py  logger.py  main.py  proxy.py  pyproject.toml  service.py  whois.py
resources/: domains.txt
